[package]
name = "flash_runtime"
version = "0.1.0"
edition = "2024"
authors = ["傲娇小霖霖"]
readme = "README.md"
repository = "https://github.com/aojiaoxiaolinlin/flash_runtime"
homepage = "https://github.com/aojiaoxiaolinlin/flash_runtime"
description = "A simple flash animation runtime"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.98"
bytemuck = "1.22.0"
enum-map = "2.7.3"
flate2 = "1.1.1"
gif = "0.13.1"
glam = "0.29"
indexmap = "2.5.0"
jpeg-decoder = "0.3.1"
lyon_tessellation = "1.0.15"
num-derive = "0.4.2"
num-traits = "0.2.19"
png = "0.17.16"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
swf = "0.2.2"
thiserror = "2.0.12"
tracing = "0.1.41"
wide = "0.7.32"
